--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="popular_tv">Popular</string>
     <string name="top_rated_tv">Top rated</string>
     <string name="upcoming_tv">Upcoming</string>
+    <string name="movie_toolbar_btn">MOVIE</string>
+    <string name="people_toolbar_btn">PEOPLE</string>
+    <string name="favorite_toolbar_btn">FAVORITE</string>
 </resources>
